--- a/styles.css
+++ b/styles.css
@@ -33,15 +33,6 @@ h1 {
   color: var(--darkgrey);
 }
 
-h2 {
-  font-weight: 500;
-  font-size: 48px;
-  line-height: 51px;
-  letter-spacing: -0.02em;
-  margin: 0;
-  padding: 0;
-}
-
 h3 {
   font-weight: 600;
   font-size: 16px;
@@ -56,14 +47,6 @@ h4 {
   line-height: 32px;
   margin: 0;
   padding: 0;
-}
-
-h5 {
-  font-weight: 600;
-  font-size: 16px;
-  line-height: 19px;
-  margin: 0;
-  padding: 0 0 20px;
 }
 
 p {
@@ -151,6 +134,11 @@ header {
   display: block;
 }
 
+video {
+  width: auto;
+  height: 100%;
+}
+
 .header__teaser {
   margin: 0 0 80px 0;
   padding: 0 20px;
@@ -163,73 +151,6 @@ header {
   line-height: 26px;
 }
 
-.header__price {
-  margin: 0 0 15px 0;
-  color: #6d747d;
-  font-size: 20px;
-}
-
-/* CTA Buttons */
-
-.header__cta-buttons {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: flex-start;
-  gap: 10px;
-}
-
-.button {
-  border: none;
-  color: #fff;
-  padding: 12px 23px;
-  border-radius: 30px;
-  font-family: NeueHaasUnicaPro;
-  font-size: 14px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-
-.cta-button--primary {
-  background-color: var(--darkgrey);
-}
-
-.cta-button--primary:hover {
-  background-color: rgba(25, 28, 31, 0.8);
-}
-
-.cta-button--secondary {
-  background-color: #fff;
-  color: var(--darkgrey);
-  border: 2px solid #b1b9c5;
-}
-
-.cta-button--secondary:hover {
-  border: 2px solid rgba(25, 28, 31, 0.7);
-}
-
-/* sticky cta button */
-
-#cta-button--sticky {
-  width: 100vw;
-  padding: 20px 20px;
-
-  position: fixed;
-  bottom: 0;
-  z-index: 100;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: end;
-}
-
-.show {
-  visibility: visible;
-  opacity: 1;
-}
-
-.hide {
-  visibility: hidden;
-  opacity: 0;
-}
 
 /* Slogan section */
 
@@ -276,229 +197,6 @@ header {
   font-weight: 500;
   letter-spacing: -0.02em;
   color: #fff;
-}
-
-/* Presentation Section */
-
-.presentation__section {
-  height: 360vh;
-  position: relative;
-}
-
-.presentation__container {
-  height: 100vh;
-  width: 100%;
-  padding: 40px 0 0;
-  position: sticky;
-  top: 0px;
-
-  color: #fff;
-  background-image: url("assets/imgs/t8_front-bottom.jpg");
-  background-position: 50% 30%;
-  background-size: cover;
-}
-
-.presentation__layout {
-  height: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 0 20px;
-  position: relative;
-}
-
-.presentation__heading-container {
-  text-align: center;
-}
-
-.presentation__subheading {
-  margin-bottom: 10px;
-}
-
-.presentation__highlight {
-  position: absolute;
-  bottom: 0px;
-}
-
-.presentation__hightlight-text {
-  margin: 0 20px 10px 0;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.2;
-}
-
-.presentation__highlight-size {
-  margin: 0 0 40px !important;
-  opacity: 0.5;
-}
-
-.presentation__highlight-big {
-  position: absolute;
-  bottom: 0px;
-  padding-right: 20px;
-}
-
-.highlight-big__heading {
-  margin: 0 0 10px !important;
-  padding: 0 !important;
-}
-
-.highlight-big__text {
-  font-size: 24px;
-  line-height: 1.1;
-  font-weight: 500;
-  letter-spacing: -0.02em;
-  color: #fff;
-}
-
-/* Specialty */
-
-.specialty__section {
-  width: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 96px 0 0;
-}
-
-.specialty__layout {
-  display: flex;
-  flex-flow: column nowrap;
-}
-
-.specialty__text-container {
-  margin: 0 0 30px;
-  padding: 0 20px;
-}
-
-.specialty__heading {
-  margin: 0 0 20px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.25;
-}
-
-.specialty__title {
-  margin-bottom: 47px;
-  width: 100%;
-
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 1.05;
-}
-
-.specialty__text {
-  line-height: 1.2;
-  letter-spacing: -0.03em;
-}
-
-.specialty__highlight {
-  margin-top: 13px;
-  width: 270px;
-
-  font-weight: 500;
-  line-height: 1.05;
-}
-
-.specialty__media-container {
-  padding: 0 20px;
-  margin: 0 auto;
-  max-width: 1280px;
-}
-
-.specialty__media-img {
-  width: 100%;
-  height: 60vh;
-  margin: 0 0 24px;
-  object-fit: cover;
-  object-position: 50% 45%;
-}
-
-.specialty__media-vid {
-  width: 100%;
-  margin: 0 0 14px;
-  object-fit: contain;
-}
-
-.specialty__media-text {
-  font-size: 14px;
-  line-height: 1.2;
-}
-
-/* Break */
-
-.break__container {
-  width: 100%;
-  height: 210px;
-
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  align-items: center;
-}
-
-.break__frame {
-  height: 100vh;
-  width: 100vw;
-  background-image: url(assets/imgs/IMG_20230610_130031.jpg);
-  background-position: 50% 50%;
-  background-size: cover;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.break__text {
-  font-size: 24px;
-  font-weight: 500;
-  line-height: 1.05;
-  letter-spacing: -0.05em;
-  color: white;
-}
-
-/* Portrait Section */
-
-.portrait__section {
-  height: 300vh;
-  position: relative;
-}
-
-.portrait__container {
-  width: 100%;
-  height: 100vh;
-  padding: 0 20px;
-  position: sticky;
-  top: 0px;
-
-  color: #fff;
-  background-image: url("assets/imgs/t8_right-middle.jpg");
-  background-position: 50% 50%;
-  background-size: cover;
-}
-
-.portrait__layout {
-  height: 100%;
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 22px 0;
-}
-
-.portrait__text-container {
-  height: 100%;
-  width: 100%;
-  position: relative;
-}
-
-.portrait__heading {
-  font-size: 24px;
-  letter-spacing: -0.02em;
-  line-height: 1.05;
-}
-
-.portrait__highlight {
-  width: 100%;
-  position: absolute;
-  bottom: 0px;
-  padding-bottom: 40px;
 }
 
 /* Summary */
@@ -573,47 +271,9 @@ header {
   transform: rotate(60deg);
 }
 
-
-/* IMG */
-
-.media__img {
-  height: 80vh;
-  background-image: url("assets/imgs/t8_left-detail.jpg");
-  background-position: 78% 50%;
-  background-size: cover;
-}
-
 /* Footer */
 
 /* USP */
-
-.footer__usp {
-  padding: 0 20px 24px 20px;
-  background-color: #2c3033;
-  color: #fff;
-}
-
-.footer__usp-item {
-  padding-top: 24px;
-  display: flex;
-  justify-content: start;
-  align-items: start;
-  gap: 16px;
-}
-
-.footer__usp-heading {
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 24px;
-}
-
-.footer__usp-link {
-  text-decoration: none;
-  color: #b1b9c5;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 24px;
-}
 
 .footer__container {
   padding: 64px 20px 40px 20px;
@@ -759,19 +419,6 @@ sl-checkbox label {
   width: 20px;
 }
 
-/* Icons */
-
-.footer__icons-wrapper {
-  margin: 48px 0 0 0;
-  padding: 0 0 24px;
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  gap: 35px;
-  color: rgba(256, 256, 256, 0.2);
-  border-bottom: 1px solid rgba(256, 256, 256, 0.2);
-}
-
 /* Bottom */
 
 .footer__bottom {
@@ -787,15 +434,6 @@ sl-checkbox label {
   gap: 12px;
 }
 
-.footer__policies {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.footer__policies-item {
-  padding-top: 24px;
-}
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
@@ -805,128 +443,6 @@ sl-checkbox label {
 
   .slogan__text {
     font-size: 48px;
-  }
-
-  /* Presentation Section */
-
-  .presentation__highlight {
-    width: 80%;
-  }
-
-  .presentation__hightlight-text {
-    font-size: 20px;
-  }
-
-  .presentation__highlight-big {
-    width: 80%;
-  }
-
-  .highlight-big__text {
-    font-size: 32px;
-  }
-
-  .presentation__highlight-small {
-    width: 80%;
-  }
-
-  /* Specialty Section */
-
-  .distance {
-    height: 10vh;
-  }
-
-  .specialty__section {
-    height: 350vh;
-    position: relative;
-  }
-
-  .specialty__container {
-    height: 100vh;
-    position: sticky;
-    top: 50px;
-  }
-
-  .specialty__layout {
-    height: 95vh;
-    flex-flow: column wrap;
-    align-content: space-between;
-  }
-
-  .specialty__text-container {
-    width: 50%;
-    padding-right: 30px;
-    margin-bottom: 40px;
-    order: 1;
-  }
-
-  .specialty__title {
-    font-size: 40px;
-  }
-
-  .specialty__highlight {
-    margin-top: 24px;
-    width: 100%;
-  }
-
-  .specialty__text {
-    font-size: 28px;
-    line-height: 1.1;
-  }
-
-  .specialty__media-container {
-    width: 45%;
-    margin: 0;
-  }
-
-  .media-container__img {
-    padding: 0;
-    order: 3;
-    width: 45%;
-    height: 100%;
-
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-
-  .specialty__media-img {
-    margin: 0;
-    height: 50vh;
-  }
-
-  .media-container__vid {
-    order: 2;
-    padding-right: 20px;
-  }
-
-  .specialty__media-vid {
-    height: 20vh;
-    object-position: 0;
-  }
-
-  .break__container {
-    width: 100%;
-    height: 100vh;
-
-    position: absolute;
-    top: 0px;
-  }
-
-  .break__text {
-    font-size: 60px;
-    text-align: center;
-  }
-
-  /* Portrait Section */
-
-  .portrait__text-container {
-    width: 80%;
-  }
-
-  .portrait__heading {
-    font-size: 32px;
-    letter-spacing: -0.03em;
-    line-height: 1.1;
   }
 
   /* Summary */
@@ -947,7 +463,7 @@ sl-checkbox label {
   }
 
   .footer__newsletter-text {
-    margin: 0; 
+    margin-bottom: 24px; 
   }
 
   .footer__bottom {
@@ -988,32 +504,6 @@ sl-checkbox label {
 
   .header__carousel {
     order: 3;
-  }
-
-  /* Presentation Section */
-
-  .presentation__container {
-    padding: 40px 70px 0;
-  }
-
-  .presentation__highlight {
-    width: 60%;
-  }
-
-  /* Specialty Section */
-
-  .specialty__text-container {
-    padding: 0 70px;
-  }
-
-  .media-container__vid {
-    padding: 0 70px;
-  }
-
-  /* Portrait Section */
-
-  .portrait__container {
-    padding: 22px 70px;
   }
 
   /* Summary */
@@ -1072,22 +562,6 @@ sl-checkbox label {
 }
 
 @media only screen and (min-width: 1024px) {
-  
-  .presentation__container {
-    padding: 60px 70px 0;
-  }
-
-  .specialty__text-container {
-    width: 45%;
-  }
-
-  .portrait__container {
-    padding: 58px 70px;
-  }
-
-  .portrait__text-container {
-    width: 60%;
-  }
 
   .footer__usp-layout {
     max-width: 1280px;
@@ -1100,14 +574,5 @@ sl-checkbox label {
   .footer__wrapper {
     max-width: 1280px;
     margin: 0 auto;
-  }
-}
-
-
-@media only screen and (min-width: 1281px) {
-  #cta-button--sticky {
-    max-width: 1280px;
-    margin: 0 calc((100vw - 1280px)/2);
-    padding: 20px 0;
   }
 }
